@@ -1,7 +1,27 @@
+"""
+    Elliptic Curve Library
+
+    Copyright 2017 Ivan Sarno
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+"""
 import random
 import ECL
 from ECL import elgamal, utility
 from ECL.elgamal import ElGamalError
+
+__author__ = 'ivansarno'
+__version__ = 'V.5.4'
 
 
 def test_functionality() -> bool:
@@ -21,6 +41,7 @@ def test_out_of_range() -> bool:
         return False
     except ElGamalError:
         return True
+
 
 def test_rapresentation() -> bool:
     private = elgamal.PrivateKey.keygen(ECL.std_curves.PointP192(), utility.generator)
