@@ -1,0 +1,28 @@
+"""
+    Elliptic Curve Library
+
+    Copyright 2017 Ivan Sarno
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+"""
+import ECL
+import random
+
+__author__ = 'ivansarno'
+__version__ = 'V.5.4'
+
+
+def test_koblitz() -> bool:
+    n = random.randrange(20000)
+    point, padding = ECL.koblitz.iterative_encode(n, ECL.std_curves.CurveP192())
+    return ECL.koblitz.decode(point, padding) == n and point.check(ECL.std_curves.CurveP192())
